objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>UPC Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Not converted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Marketing - Nurturing</fullName>
        </values>
        <values>
            <fullName>Opened - Unqualified</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Sales - Not Contacted</fullName>
        </values>
        <values>
            <fullName>Sales - Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>UPC Partner Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed - Not converted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>In Qualification</fullName>
        </values>
        <values>
            <fullName>Opened - Unqualified</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time_old__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age_old__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTTH_Download__c</fullName>
        <description>Used to score leads based on the ftth download speed.</description>
        <label>FTTH Download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTTH_Upload__c</fullName>
        <description>Used to score leads based on the FTTH Upload speed.</description>
        <label>FTTH Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HFC_Upload__c</fullName>
        <description>Used to score leads based on the HFC upload speed.</description>
        <label>HFC Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Sole proprietorship (Einzelunternehmen)</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>General Partnership (Kollektivgesellschaft)</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Limited (Aktiengesellschaft)</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Limited Liability Company (Gesellschaft mit beschränkter Haftung)</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Cooperative (Genossenschaft)</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Association (Verein)</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Foundation (Stiftung)</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Particular legal form (Besondere Rechtsformen)</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Swiss branch (Schweizerische Zweigniederlassung)</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Limited Partnership (Kommanditgesellschaft)</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Corporation with unlimited partners (Kommanditaktiengesellschaft)</label>
                </value>
                <value>
                    <fullName>82</fullName>
                    <label>Public corporation (Selbst. öffentlichrechtliche Körperschaft)</label>
                </value>
                <value>
                    <fullName>83</fullName>
                    <label>Public-law institution (öffentlichrechtliche Anstalt)</label>
                </value>
                <value>
                    <fullName>84</fullName>
                    <label>Indivision (Gemeinderschaft)</label>
                </value>
                <value>
                    <fullName>85</fullName>
                    <label>Institute of public law (Institut des öffentlichen Rechts)</label>
                </value>
                <value>
                    <fullName>86</fullName>
                    <label>Non-commercial procuration (Nichtkaufmännische Prokura)</label>
                </value>
                <value>
                    <fullName>89</fullName>
                    <label>Not defined legal form (Nicht definierte Rechtsform)</label>
                </value>
                <value>
                    <fullName>92</fullName>
                    <label>Foreign branch (Ausländische Zweigniederlassung)</label>
                </value>
                <value>
                    <fullName>101</fullName>
                    <label>Sole proprietorship (Einzelunternehmen).</label>
                </value>
                <value>
                    <fullName>823</fullName>
                    <label>Limited by public law (öffentlichrechtliche AG)</label>
                </value>
                <value>
                    <fullName>824</fullName>
                    <label>LLC by public law (öffentlichrechtliche GmbH)</label>
                </value>
                <value>
                    <fullName>825</fullName>
                    <label>Cooperative by public law (öffentlichrechtliche Genossenschaft)</label>
                </value>
                <value>
                    <fullName>826</fullName>
                    <label>Association by public law (öffentlichrechtlicher Verein)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Not_Contacted_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales - Not Contacted Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Working_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales - Working Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Activities_7days__c</fullName>
        <description>Field created by Nexell, the checkbox is ticked if there was an activity in the past 7 days</description>
        <formula>ABS(LastActivityDate-TODAY()) &lt;=7</formula>
        <label>Activities 7days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Address_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPC_Address_ID</label>
        <referenceTo>UPC_ADBASE__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Address_given__c</fullName>
        <description>Field created by Nexell, the checkbox is ticked if address is present</description>
        <formula>NOT(ISBLANK(City))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_BCSS_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCSS Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_BCSS_Download__c</fullName>
        <label>BCSS_Download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_BCSS_Upload__c</fullName>
        <label>BCSS Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Building_ID__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; UPC_Address_ID__r.Id , 
TEXT( UPC_Address_ID__r.UPC_ID_BUILDING__c ) 
, &quot;_self&quot; )</formula>
        <inlineHelpText>This is the Building ID Related to the Address.</inlineHelpText>
        <label>Building ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_CH_ID__c</fullName>
        <description>Field Created by Nexell to manage the CH-ID. 
The CH-ID is the Zefix identifier.</description>
        <label>CH-ID</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_CompanyAdditionalName__c</fullName>
        <description>Created by Nexell to track Company additional name.</description>
        <label>Company Add. Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Converted_Account__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to know if an account was created from lead conversion.</description>
        <label>Converted Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_DPhone__c</fullName>
        <description>Created by NExell to control the contacts direct phone.</description>
        <label>Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UPC_Duration_Active_Stage__c</fullName>
        <description>Created by Nexell.</description>
        <formula>FLOOR((NOW() -  UPC_Last_transition_date__c ) *24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Active Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_EHRA_ID__c</fullName>
        <description>Field created by Nexell to identify the EHRA-ID. 
EHRA-ID is used the primary key of Zefix.</description>
        <label>EHRA-ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Email_given__c</fullName>
        <description>Field created by Nexell, the checkbox is ticked if email is present</description>
        <formula>NOT(ISBLANK( Email ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to score leads that have a site with FTTH Available.</description>
        <label>FTTH Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Founding_Date__c</fullName>
        <description>Field created by Nexell and used to see which year the company was created</description>
        <label>Founding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Grouped_number_of_employees__c</fullName>
        <description>Created by Nexell and used to Group the number of employees into 3 defined groups for segmentation purposes.</description>
        <label>Grouped number of employees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 10</fullName>
                </value>
                <value>
                    <fullName>10 - 49</fullName>
                </value>
                <value>
                    <fullName>&gt;=50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_HFC_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to score leads that have a site with HFC Available.</description>
        <label>HFC Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_HFC_Download__c</fullName>
        <description>Used to score leads based on the HFC download speed.</description>
        <label>HFC Download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Has_Permalead_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to score leads that have permaleads event.</description>
        <label>Has Permalead Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_IndustryDivision__c</fullName>
        <description>Shows the Industry for the current company. Divisions are defined by the Federal Statistical Office FSO</description>
        <inlineHelpText>Industry Division for the current company. Divisions are defined by the Federal Statistical Office FSO</inlineHelpText>
        <label>Industry Division</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A01_Crop and animal produc., hunting (Landw. u. Jagd)</fullName>
                </value>
                <value>
                    <fullName>A02_Forestry and logging (Forstw. u. Holzeinschlag)</fullName>
                </value>
                <value>
                    <fullName>A03_Fishing and aquaculture (Fischerei u. Aquakultur)</fullName>
                </value>
                <value>
                    <fullName>B05_Mining of coal and lignite (Kohlenbergbau)</fullName>
                </value>
                <value>
                    <fullName>B06_Extr. of crude petroleum and nat. gas (Gew. v. Erdöl u. Erdgas)</fullName>
                </value>
                <value>
                    <fullName>B07_Mining of metal ores (Erzbergbau)</fullName>
                </value>
                <value>
                    <fullName>B08_O. mining and quarrying (Gew. v. Steinen u. Erden, sonst. Bergbau)</fullName>
                </value>
                <value>
                    <fullName>B09_Mining support service activities (DL f. den Bergbau)</fullName>
                </value>
                <value>
                    <fullName>C10_Manufacture of food products (H.v. Nahrungs- u. Futterm.)</fullName>
                </value>
                <value>
                    <fullName>C11_Manufacture of beverages (Getränkeherstellung)</fullName>
                </value>
                <value>
                    <fullName>C12_Ma. of tabacco products (Tabakverarbeitung)</fullName>
                </value>
                <value>
                    <fullName>C13_Ma. of textiles (Herstellung von Textilien)</fullName>
                </value>
                <value>
                    <fullName>C14_Ma. of wearing apparel (H.v. Bekleidung)</fullName>
                </value>
                <value>
                    <fullName>C15_Ma. of leather and related products (H.v. Leder, Lederwaren u. Schuhen)</fullName>
                </value>
                <value>
                    <fullName>C16_Ma. of wood a. of prod. of wood a. cork (H.v. Holz-, Flecht-, Korb- u. Korkwa.)</fullName>
                </value>
                <value>
                    <fullName>C17_Ma. of paper and paper products (H.v. Papier, Pappe u. Waren daraus)</fullName>
                </value>
                <value>
                    <fullName>C18_Printing and reprod. of recorded media (H.v. Druckerz.; Vervielf. v. Datenträger)</fullName>
                </value>
                <value>
                    <fullName>C19_Ma. of coke and refined petroleum prod. (Kokerei u. Mineralölverarb.)</fullName>
                </value>
                <value>
                    <fullName>C20_Ma. of chemicals and chemical prod. (H.v. chem. Erzeugnissen)</fullName>
                </value>
                <value>
                    <fullName>C21_Ma. of pharmaceutical prod. a. prep. (H.v. pharma. Erzeugnissen)</fullName>
                </value>
                <value>
                    <fullName>C22_Ma. of rubber and plastic products (H.v. Gummi- u. Kunststoffwaren)</fullName>
                </value>
                <value>
                    <fullName>C23_Ma. of o. non-metallic mineral prod. (H.v. Glas u. Glaswa., Keramik usw.)</fullName>
                </value>
                <value>
                    <fullName>C24_Manufacture of basic metals (Metallerz. u. -bearb.)</fullName>
                </value>
                <value>
                    <fullName>C25_Ma. of fab. metal prod., except mach. (H.v. Metallerz.)</fullName>
                </value>
                <value>
                    <fullName>C26_Ma. of computer and electronic prod. (H.v. Ge. f. die Datenverarb.)</fullName>
                </value>
                <value>
                    <fullName>C27_Manufacture of electrical equipment (H.v. el. Ausrüst.)</fullName>
                </value>
                <value>
                    <fullName>C28_Ma. of machinery and equipment n.e.c. (Maschinenbau)</fullName>
                </value>
                <value>
                    <fullName>C29_Ma. of motor vehicles (H.v. Automobilen u. Automobilt.)</fullName>
                </value>
                <value>
                    <fullName>C30_Ma. of o. transport equipment (Sonst. Fahrzeugbau)</fullName>
                </value>
                <value>
                    <fullName>C31_Manufacture of furniture (H.v. Möbeln)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Industry_given__c</fullName>
        <description>Field created by Nexell, the checkbox is ticked if industry is present</description>
        <formula>NOT(ISBLANK(TEXT( Industry )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Interested_in_Internet__c</fullName>
        <description>Used to Score Leads Interested in Internet</description>
        <formula>INCLUDES( UPC_Product_of_interest__c , &quot;Business Internet&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interested in Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Interested_in_Mobile__c</fullName>
        <description>Used to Score leads interested in Mobile.</description>
        <formula>INCLUDES( UPC_Product_of_interest__c , &quot;Business Mobile&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interested in Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Interested_in_VPN__c</fullName>
        <formula>INCLUDES( UPC_Product_of_interest__c , &quot;Business VPN&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interested in VPN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Zefix_Update__c</fullName>
        <label>Last Zefix Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_Last_transition_date__c</fullName>
        <description>Created by Nexell to track the last date/time a status was changed as part of the calculation of age per status.</description>
        <label>Last transition date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_Lead_Age__c</fullName>
        <description>Field Created by Nexell. Lead Age expressed in Days.</description>
        <formula>IF(IsConverted,ConvertedDate - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lead Age expressed in Days. If the lead is open it calculates today - created date. If the lead is converted, calculates Converted Date - Created Date.</inlineHelpText>
        <label>Lead Total Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Lead_Score_Number__c</fullName>
        <description>Field created by Nexell, the formula calculates a score depending on fields given and corresponding score</description>
        <formula>IF(UPC_Email_given__c,5,0)+
IF(UPC_Phone_given__c,5,0)+
IF(UPC_UID_given__c,2,0)+
IF(UPC_Number_of_employees_given__c,5,0)+   
IF(UPC_Product_of_interest_given__c ,5,0)+ 
IF(UPC_Title_given__c ,1,0)+
IF(UPC_Industry_given__c ,2,0)+
IF(DoNotCall,-5,0)+
IF(HasOptedOutOfEmail,-5,0)+
IF(UPC_Activities_7days__c,5,-5)+
IF(UPC_Address_given__c,10,-10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Marketing_Nurturing_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Marketing - Nurturing Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Marketing_Nurturing_Total_Duration_T__c</fullName>
        <description>Used to convert and display as xx hr yy min</description>
        <formula>TEXT(FLOOR(UPC_Marketing_Nurturing_Total_Duration__c / 1440))&amp;&apos;Days &apos;&amp;
TEXT(FLOOR(MOD(UPC_Marketing_Nurturing_Total_Duration__c,1440)/60))&amp;&apos;Hr &apos;&amp;
TEXT(MOD(MOD(UPC_Marketing_Nurturing_Total_Duration__c,1440),60))&amp;&apos;Min &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing - Nurturing Total Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Marketing_Nurturing_Total_Duration__c</fullName>
        <description>Created by Nexell to control the total duration time on this stage.</description>
        <formula>IF(  ISPICKVAL(Status,&apos;Marketing - Nurturing&apos; ) ,
  UPC_Marketing_Nurturing_Duration__c  +  UPC_Duration_Active_Stage__c,
 UPC_Marketing_Nurturing_Duration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing - Nurturing Total Duration (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_NogaCodes__c</fullName>
        <description>Holds the NOGA codes as issued by the Federal Statistical Office FSO</description>
        <inlineHelpText>NOGA codes are issued by the Federal Statistical Office FSO. Enclose codes in #, Example: #611000#612000#. Find the NOGA codes on http://www.monetas.ch/</inlineHelpText>
        <label>NOGA Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Number_of_employees_given__c</fullName>
        <description>Field created by Nexell, the checkbox is ticked if number of employees is present</description>
        <formula>NOT(ISNULL( NumberOfEmployees ))</formula>
        <label>Number of employees given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Number_of_sites__c</fullName>
        <description>Field created by Nexell and used to view the number of sites</description>
        <label>Number of sites</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Opened_Unqualified_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opened Unqualified Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Opened_Unqualified_Total_Duration_T__c</fullName>
        <description>Used to convertd number of minutes into the x hr y min</description>
        <formula>TEXT(FLOOR(UPC_Opened_Unqualified_Total_Duration__c / 1440))&amp;&apos;Days &apos;&amp;
TEXT(FLOOR(MOD(UPC_Opened_Unqualified_Total_Duration__c,1440)/60))&amp;&apos;Hr &apos;&amp;
TEXT(MOD(MOD(UPC_Opened_Unqualified_Total_Duration__c,1440),60))&amp;&apos;Min &apos;</formula>
        <label>Opened Unqualified Total Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Opened_Unqualified_Total_Duration__c</fullName>
        <description>Created by Nexell to control the total duration time on this stage.</description>
        <formula>IF(  ISPICKVAL(Status,&apos;Opened - Unqualified&apos; ) ,
 UPC_Opened_Unqualified_Duration__c +  UPC_Duration_Active_Stage__c,
 UPC_Opened_Unqualified_Duration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opened Unqualified Total Duration (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Phone_given__c</fullName>
        <description>Field created by Nexell, the checkbox is ticked if mobile or phone number is present</description>
        <formula>OR(NOT(ISBLANK( MobilePhone )),NOT(ISBLANK( Phone )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Product_of_interest__c</fullName>
        <description>Field created by Nexell and used to view the lead&apos;s product preferences</description>
        <label>Product of interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Mobile</fullName>
                </value>
                <value>
                    <fullName>Business Internet</fullName>
                </value>
                <value>
                    <fullName>Business VPN</fullName>
                </value>
                <value>
                    <fullName>Business Internet Fiber Power</fullName>
                </value>
                <value>
                    <fullName>Business Voice IP PBX</fullName>
                </value>
                <value>
                    <fullName>Business Voice ISDN PBX</fullName>
                </value>
                <value>
                    <fullName>Business Package</fullName>
                </value>
                <value>
                    <fullName>Business Digital TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Product_of_interest_given__c</fullName>
        <description>Field created by Nexell, the checkbox is ticked if a product of interest is present</description>
        <formula>NOT(ISBLANK( UPC_Product_of_interest__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product of interest given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Sales_Not_Contacted_Total_Duration_T__c</fullName>
        <description>Used to convertd number of minutes into the x hr y min</description>
        <formula>TEXT(FLOOR(UPC_Sales_Not_Contacted_Total_Duration__c/ 1440))&amp;&apos;Days &apos;&amp; 
TEXT(FLOOR(MOD(UPC_Sales_Not_Contacted_Total_Duration__c,1440)/60))&amp;&apos;Hr &apos;&amp; 
TEXT(MOD(MOD(UPC_Sales_Not_Contacted_Total_Duration__c,1440),60))&amp;&apos;Min &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales - Not Contacted Total Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Sales_Not_Contacted_Total_Duration__c</fullName>
        <description>Created by Nexell to control the total duration time on this stage.</description>
        <formula>IF(  ISPICKVAL(Status,&apos;Sales - Not Contacted&apos; ) ,
  Sales_Not_Contacted_Duration__c  +  UPC_Duration_Active_Stage__c,
 Sales_Not_Contacted_Duration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales - Not Contacted Total Duration (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Sales_Working_Total_Duration_T__c</fullName>
        <description>Used to convert and display as xx hr yy min</description>
        <formula>TEXT(FLOOR(UPC_Sales_Working_Total_Duration__c / 1440))&amp;&apos;Days &apos;&amp; 
TEXT(FLOOR(MOD(UPC_Sales_Working_Total_Duration__c ,1440)/60))&amp;&apos;Hr &apos;&amp; 
TEXT(MOD(MOD(UPC_Sales_Working_Total_Duration__c ,1440),60))&amp;&apos;Min &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales - Working Total Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Sales_Working_Total_Duration__c</fullName>
        <description>Created by Nexell to control the total duration time on this stage.</description>
        <formula>IF(  ISPICKVAL(Status,&apos;Sales - Working&apos; ) ,
  Sales_Working_Duration__c  +  UPC_Duration_Active_Stage__c,
 Sales_Working_Duration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales - Working Total Duration (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>